.feat: endpoint to get current delivery tour
