# models/parcel.mjs
@@ -1,0 +1,12 @@
+class Parcel {
+    uuid
+    addressStreet
+    town
+    zipCode
+    country
+    isDelivered
+    dateDelivered
+    urlProofDelivered
+}
+
+export {Parcel}
