# swagger/models.mjs
@@ -24,6 +24,21 @@ export default {
     ConnectionInfo: {
         login: "string",
         password: "string"
+    },
+
+    Tour: {
+        id: "0",
+        date: "2000-01-01",
+        parcels: [{
+            uuid: "00000000-0000-0000-0000-000000000000",
+            addressStreet: "string",
+            town: "string",
+            zipCode: "string",
+            country: "string",
+            isDelivered: true,
+            dateDelivered: "2000-01-01",
+            urlProofDelivered: "string"
+        }]
     }
 
 }
